// Jest Snapshot v1, https://goo.gl/fbAQLP

// THIS FILE HAS BEEN MODIFIED FROM THE ORIGINAL SOURCE
// This comment only applies to modifications applied after the e633644c43a0a0271e0b6c32c382ce1db6b413c3 commit
// Copyright 2019 LogRhythm, Inc
// Licensed under the LogRhythm Global End User License Agreement,
// which can be found through this page: https://logrhythm.com/about/logrhythm-terms-and-conditions/

exports[`Header should render a different name, prompt, and beta tag if provided 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />

      <EuiBetaBadge
        label="Beta"
      />
    </h1>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiText
        size="s"
      >
        <p>
          <EuiTextColor
            color="subdued"
          >
            <FormattedMessage
              defaultMessage="NetMon-UI uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
              id="kbn.management.createIndexPatternLabel"
              values={Object {}}
            />
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <div>
    Test prompt
  </div>
  <EuiSpacer
    size="m"
  />
</div>
`;

exports[`Header should render normally 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": undefined,
          }
        }
      />
    </h1>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiText
        size="s"
      >
        <p>
          <EuiTextColor
            color="subdued"
          >
            <FormattedMessage
              defaultMessage="NetMon-UI uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
              id="kbn.management.createIndexPatternLabel"
              values={Object {}}
            />
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="m"
  />
</div>
`;

exports[`Header should render without including system indices 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": undefined,
          }
        }
      />
    </h1>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiText
        size="s"
      >
        <p>
          <EuiTextColor
            color="subdued"
          >
            <FormattedMessage
              defaultMessage="NetMon-UI uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
              id="kbn.management.createIndexPatternLabel"
              values={Object {}}
            />
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="m"
  />
</div>
`;
